--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "rick morty server",
   "main": "app.js",
   "scripts": {
+    "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,15 +15,45 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "commitizen": "^4.2.4",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
-    "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.8",
-    "objects-to-csv": "^1.3.6"
+    "objects-to-csv": "^1.3.6",
+    "prettier": "^2.3.2"
   },
   "bugs": {
     "url": "https://github.com/cristiandiazz/rick-morty-server/issues"
   },
-  "homepage": "https://github.com/cristiandiazz/rick-morty-server#readme"
+  "homepage": "https://github.com/cristiandiazz/rick-morty-server#readme",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
+  }
 }
