--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/ --ignore-pattern dist/"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^5.12.8",
     "objects-to-csv": "^1.3.6",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "method-override": "^2.1.2",
+    "body-parser": "^1.5.1"
   },
   "bugs": {
     "url": "https://github.com/cristiandiazz/rick-morty-server/issues"
